--- a/src/components/canvas.css
+++ b/src/components/canvas.css
@@ -1,4 +1,6 @@
-/* .canvas {
+canvas {
 	grid-area: 2/1/5/1;
-	background-color: lightsalmon;
-} */
+	height: 100%;
+	width: 100%;
+	position: relative;
+}
