--- a/src/components/game.css
+++ b/src/components/game.css
@@ -1,12 +1,12 @@
 .grid-container {
 	display: grid;
-	grid-template-columns: 500px 100px;
-	grid-template-rows: auto auto auto auto;
-	padding: 30px;
-	/* grid-template-areas:
-	"score score"
-	"c c sidebar"
-	"footer footer footer"; */
+	width: 60vh;
+	height: 90vh;
+	grid-template-columns: 2fr 1fr;
+	grid-template-rows: 0.2fr 1fr 1fr 1fr;
+	padding: 10px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .grid-item {
@@ -18,13 +18,9 @@
 	background-color: lightcoral;
 }
 
-/* .canvas {
-	grid-area: 2/1/5/1;
-	background-color: lightsalmon;
-	height: 500px;
-} */
-
 .next-piece {
+	width: 100%;
+	height: 100%;
 	grid-area: 2/2/2/2;
 	background-color: lightpink;
 }
