--- a/src/components/canvas.css
+++ b/src/components/canvas.css
@@ -1,6 +1,15 @@
 canvas {
 	grid-area: 2/1/5/1;
-	height: 100%;
-	width: 100%;
+	/* height: 600px;
+	width: 300px; */
+	max-height: 70vh;
+	max-width: 50vw;
 	position: relative;
+	margin-top: 10px;
 }
+/* 
+@media screen and (max-width: 500px) {
+	div.example {
+		display: none;
+	}
+} */
