--- a/src/components/game.css
+++ b/src/components/game.css
@@ -1,36 +1,89 @@
-.grid-container {
-	display: grid;
-	width: 60vh;
-	height: 90vh;
-	grid-template-columns: 2fr 1fr;
-	grid-template-rows: 0.2fr 1fr 1fr 1fr;
-	padding: 10px;
-	margin-left: auto;
-	margin-right: auto;
+body {
+	font-family: Pixel, Arial, Helvetica, sans-serif;
+	color: rgb(50, 50, 50);
+	font-size: 30px;
 }
 
-.grid-item {
-	text-align: center;
+body::before {
+	content: "";
+	background-image: url("../image/background.jpg");
+	background-size: cover;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	bottom: 0px;
+	left: 0px;
+	opacity: 0.5;
+	transform: scaleX(-1);
+}
+
+.grid-container {
+	display: grid;
+	width: auto;
+	height: auto;
+	max-height: 90vh;
+	max-width: 90vw;
+	grid-template-columns: auto auto;
+	grid-template-rows: 40px 1fr;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.grid-container * {
+	border-radius: 10px;
+	box-sizing: border-box;
+}
+
+.flex-container {
+	max-height: 100%;
+	max-width: 40vw;
+	grid-area: 2/2/3/3;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+}
+.flex-container * {
+	max-width: 100%;
+	background-color: hsl(201.7, 50%, 90%);
+	border: 10px;
 }
 
 .score {
-	grid-area: 1/1/1/3;
-	background-color: lightcoral;
+	padding: 5px;
+	/* border-top-left-radius: 10px; */
+	grid-area: 1/1/2/3;
+	background-color: hsl(201.7, 50%, 70%);
 }
 
 .next-piece {
-	width: 100%;
-	height: 100%;
-	grid-area: 2/2/2/2;
-	background-color: lightpink;
+	padding: 5px;
+	margin: 10px 0px 0px 10px;
+}
+
+.next-piece-canvas {
+	height: 64px;
+	width: 80px;
+	margin: 0 auto;
+	margin-top: 0px;
+}
+
+.next-piece-wrapper {
+	text-align: center;
 }
 
 .lines-cleared {
-	grid-area: 3/2/3/2;
-	background-color: lightgreen;
+	padding: 5px;
+	margin: 10px 0px 0px 10px;
 }
 
 .level {
-	grid-area: 4/2/4/2;
-	background-color: lightblue;
+	padding: 5px;
+	margin: 10px 0px 0px 10px;
+}
+
+.value-text {
+	color: hsl(197.9, 55.8%, 47.1%);
+	margin-left: 5px;
 }
